force-app/main/default/objects/ssot__Disclosure__dlm/fields/ssot__AuthoringMode__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthoringMode__c</fullName>
    <label>Authoring Mode</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthoringMode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>