force-app/main/default/objects/ssot__Disclosure__dlm/fields/ssot__ExternalDocumentErrorMessageText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalDocumentErrorMessageText__c</fullName>
    <label>External Document Error Message</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalDocumentErrorMessageText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>