force-app/main/default/objects/ssot__Disclosure__dlm/fields/ssot__ExternalDocumentLaunchStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalDocumentLaunchStatus__c</fullName>
    <label>External Document Launch Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalDocumentLaunchStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>