force-app/main/default/objects/ssot__Disclosure__dlm/fields/ssot__IsEinsteinGeneratedDraft__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsEinsteinGeneratedDraft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Einstein Generated Draft</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsEinsteinGeneratedDraft</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>