force-app/main/default/objects/ssot__Disclosure__dlm/fields/ssot__rel_1731658748732_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658748732_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disclosure_ReplicateResponsesFromId__rel</label>
    <referenceTo>ssot__Disclosure__dlm</referenceTo>
    <relationshipLabel>Disclosure_ReplicateResponsesFromId__rel</relationshipLabel>
    <relationshipName>rel_1731658748732_end</relationshipName>
    <type>Lookup</type>
</CustomField>