force-app/main/default/objects/ssot__Disclosure__dlm/fields/ssot__rel_1732247639333_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732247639333_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disclosure_AssessmentId_map_Assessme_rel</label>
    <referenceTo>ssot__Assessment__dlm</referenceTo>
    <relationshipLabel>Disclosure_AssessmentId_map_Assessme_rel</relationshipLabel>
    <relationshipName>rel_1732247639333_end</relationshipName>
    <type>Lookup</type>
</CustomField>