force-app/main/default/objects/ssot__Disclosure__dlm/fields/ssot__ReplicateResponsesFromId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReplicateResponsesFromId__c</fullName>
    <label>Replicate Responses From</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReplicateResponsesFromId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>